Added the add new row functionality

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="body" class="body">
-  <table>
+  <table id="table">
     <tr>
       <td><div id="box-100" class="box" draggable="true">100</div></td>
       <td><div id="box-200" class="box" draggable="true">200</div></td>
@@ -22,6 +22,8 @@
       <td><div id="box-900" class="box" draggable="true">900</div></td>
     </tr>
   </table>
+  <button id="addRowButton" class="undoButton">Add Row</button>
+
 	<button id="undoButton" class="undoButton">Undo</button>
 
   <script src="script.js"></script>
