Modified css for Add Row button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <td><div id="box-900" class="box" draggable="true">900</div></td>
     </tr>
   </table>
-  <button id="addRowButton" class="undoButton">Add Row</button>
+  <button id="addRowButton" class="addRowButton">Add Row</button>
 
 	<button id="undoButton" class="undoButton">Undo</button>
 
